pads integration in css

--- a/index.html
+++ b/index.html
@@ -64,93 +64,95 @@
             <section id="section_2"> <!--hosting section-->
                 <div id="hosting"> <!--hosting division-->
                     <h1 class="hosting_title">Hébergements à Marseille</h1>
-                    <div class="hosting_line_1"> <!--first_line_hosting_division-->
-                        <a class="card_link" href="#">
-                            <div class="hosting_1"> <!--hosting_1 division-->
-                                <span class="hosting_1_img"></span>                               
-                                <h3 class="hosting_1_title">Auberge la Cannebière</h3>
-                                <p class="hosting_1_price">Nuit à partir de 25&euro;</p>
-                                <div class="stars_1">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars_grey"><i class="fas fa-star"></i></span>
+                    <div class="hosting_cards_body">
+                        <div class="hosting_line_1"> <!--first_line_hosting_division-->
+                            <a class="card_link" href="#">
+                                <div class="hosting_1"> <!--hosting_1 division-->
+                                    <span class="hosting_1_img"></span>                               
+                                    <h3 class="hosting_1_title">Auberge la Cannebière</h3>
+                                    <p class="hosting_1_price">Nuit à partir de 25&euro;</p>
+                                    <div class="stars_1">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars_grey"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a class="card_link" href="#">   
-                            <div class="hosting_2"> <!--hosting_2 division-->
-                                <span class="hosting_2_img"></span>                                
-                                <h3 class="hosting_2_title">Hôtel du port</h3>
-                                <p class="hosting_2_price">Nuit à partir de 52&euro;</p>
-                                <div class="stars_2">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
+                            </a>
+                            <a class="card_link" href="#">   
+                                <div class="hosting_2"> <!--hosting_2 division-->
+                                    <span class="hosting_2_img"></span>                                
+                                    <h3 class="hosting_2_title">Hôtel du port</h3>
+                                    <p class="hosting_2_price">Nuit à partir de 52&euro;</p>
+                                    <div class="stars_2">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a class="card_link" href="#">
-                            <div class="hosting_3"> <!--hosting_3 division-->
-                                <span class="hosting_3_img"></span>                                
-                                <h3 class="hosting_3_title">Hôtel Les Mouettes</h3>
-                                <p class="hosting_3_price">Nuit à partir de 76&euro;</p>
-                                <div class="stars_3">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars_grey"><i class="fas fa-star"></i></span>
+                            </a>
+                            <a class="card_link" href="#">
+                                <div class="hosting_3"> <!--hosting_3 division-->
+                                    <span class="hosting_3_img"></span>                                
+                                    <h3 class="hosting_3_title">Hôtel Les Mouettes</h3>
+                                    <p class="hosting_3_price">Nuit à partir de 76&euro;</p>
+                                    <div class="stars_3">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars_grey"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="hosting_line_2"> <!--second_line_hosting_division-->
-                        <a class="card_link" href="#">
-                            <div class="hosting_4"> <!--hosting_4 division-->
-                                <span class="hosting_4_img"></span>                                
-                                <h3 class="hosting_4_title">Hôtel de la mer</h3>
-                                <p class="hosting_4_price">Nuit à partir de 46&euro;</p>
-                                <div class="stars_4">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars_grey"><i class="fas fa-star"></i></span>
-                                    <span class="stars_grey"><i class="fas fa-star"></i></span>
+                            </a>
+                        </div>
+                        <div class="hosting_line_2"> <!--second_line_hosting_division-->
+                            <a class="card_link" href="#">
+                                <div class="hosting_4"> <!--hosting_4 division-->
+                                    <span class="hosting_4_img"></span>                                
+                                    <h3 class="hosting_4_title">Hôtel de la mer</h3>
+                                    <p class="hosting_4_price">Nuit à partir de 46&euro;</p>
+                                    <div class="stars_4">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars_grey"><i class="fas fa-star"></i></span>
+                                        <span class="stars_grey"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>  
-                        <a class="card_link" href="#">  
-                            <div class="hosting_5"> <!--hosting_5 division-->
-                                <span class="hosting_5_img"></span>                                
-                                <h3 class="hosting_5_title">Auberge Le Panier</h3>
-                                <p class="hosting_5_price">Nuit à partir de 23&euro;</p>
-                                <div class="stars_5">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars_grey"><i class="fas fa-star"></i></span>
+                            </a>  
+                            <a class="card_link" href="#">  
+                                <div class="hosting_5"> <!--hosting_5 division-->
+                                    <span class="hosting_5_img"></span>                                
+                                    <h3 class="hosting_5_title">Auberge Le Panier</h3>
+                                    <p class="hosting_5_price">Nuit à partir de 23&euro;</p>
+                                    <div class="stars_5">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars_grey"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
-                        <a class="card_link" href="#">    
-                            <div class="hosting_6"><!--hostin_6 division-->
-                                <span class="hosting_6_img"></span>                                
-                                <h3 class="hosting_6_title">Hôtel chez Amina</h3>
-                                <p class="hosting_6_price">Nuit à partir de 96&euro;</p>
-                                <div class="stars_6">
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
-                                    <span class="stars"><i class="fas fa-star"></i></span>
+                            </a>
+                            <a class="card_link" href="#">    
+                                <div class="hosting_6"><!--hostin_6 division-->
+                                    <span class="hosting_6_img"></span>                                
+                                    <h3 class="hosting_6_title">Hôtel chez Amina</h3>
+                                    <p class="hosting_6_price">Nuit à partir de 96&euro;</p>
+                                    <div class="stars_6">
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                        <span class="stars"><i class="fas fa-star"></i></span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>    
+                            </a>    
+                        </div>
                     </div>
                     <h2 class="hosting_footer">Afficher plus</h2>
                 </div>
