--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <main id="container">
             <header> <!--page header-->
                 <img class="logo" src="Images/Logo/Reservia.svg" alt="Logo Reservia">  <!--reservia logo-->
-                <p class="inscription">S'inscrire</p> <!--inscription-->
+                <p class="inscription" style="cursor: pointer;">S'inscrire</p> <!--inscription-->
                 <nav class="navigation">
                     <p class="hosting_link"><a class="hosting_link" href="#hosting">Hébergements</a></p> <!--hosting link-->
                     <p class="activities_link"><a class="activities_link" href="#activities">Activités</a></p> <!--activities link-->
@@ -29,7 +29,7 @@
                     <form class="search_field" method="POST" action="processing.php"> <!--entry field-->
                         <i class="fas fa-map-marker-alt"></i>
                         <input type="text" name="ville" placeholder="Marseille, France">
-                        <button class="search_button" type="button"> <!--search button-->
+                        <button class="search_button" type="button" style="cursor: pointer;"> <!--search button-->
                             <span class="search_text">Rechercher</span>
                             <i class="fab fa-sistrix"></i>
                         </button>
@@ -38,19 +38,19 @@
                 <div class="filters"> <!--filters division-->
                     <h2 class="filters_title">Filtres</h2>
                     <div class="filters_icons_division">
-                        <div class="eco_filter"> <!--economic filter division-->
+                        <div class="eco_filter" style="cursor: pointer;"> <!--economic filter division-->
                             <span class="filter_icons"><i class="fa fa-solid fa-money-bill-wave"></i></span>
                             <h2 class="money">&Eacute;conomique</h2>
                         </div>
-                        <div class="fam_filter"> <!--family filter division-->
+                        <div class="fam_filter" style="cursor: pointer;"> <!--family filter division-->
                             <span class="filter_icons"><i class="fa fa-solid fa-child"></i></span>
                             <h2 class="child">Familial</h2>
                         </div>
-                        <div class="romantic_filter"> <!--romantic filter division-->
+                        <div class="romantic_filter" style="cursor: pointer;"> <!--romantic filter division-->
                             <span class="filter_icons"><i class="fa fa-solid fa-heart"></i></span>
                             <h2 class="heart">Romantique</h2>
                         </div>
-                        <div class="pets_filter"> <!--pets filter division-->
+                        <div class="pets_filter" style="cursor: pointer;"> <!--pets filter division-->
                             <span class="filter_icons"><i class="fa fa-solid fa-dog"></i></span>
                             <h2 class="dog">Animaux autorisés</h2>
                         </div>
@@ -67,9 +67,9 @@
                     <div class="hosting_cards_body">
                         <div class="hosting_line_1"> <!--first_line_hosting_division-->
                             <a class="card_link" href="#">
-                                <div class="hosting_1"> <!--hosting_1 division-->
+                                <figure class="hosting_1"> <!--hosting_1 division-->
                                     <span class="hosting_1_img"></span>                               
-                                    <h3 class="hosting_1_title">Auberge la Cannebière</h3>
+                                    <figcaption class="hosting_1_title">Auberge la Cannebière</figcaption>
                                     <p class="hosting_1_price">Nuit à partir de 25&euro;</p>
                                     <div class="stars_1">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -78,12 +78,12 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>
                             <a class="card_link" href="#">   
-                                <div class="hosting_2"> <!--hosting_2 division-->
+                                <figure class="hosting_2"> <!--hosting_2 division-->
                                     <span class="hosting_2_img"></span>                                
-                                    <h3 class="hosting_2_title">Hôtel du port</h3>
+                                    <figcaption class="hosting_2_title">Hôtel du port</figcaption>
                                     <p class="hosting_2_price">Nuit à partir de 52&euro;</p>
                                     <div class="stars_2">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -92,12 +92,12 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>
                             <a class="card_link" href="#">
-                                <div class="hosting_3"> <!--hosting_3 division-->
+                                <figure class="hosting_3"> <!--hosting_3 division-->
                                     <span class="hosting_3_img"></span>                                
-                                    <h3 class="hosting_3_title">Hôtel Les Mouettes</h3>
+                                    <figcaption class="hosting_3_title">Hôtel Les Mouettes</figcaption>
                                     <p class="hosting_3_price">Nuit à partir de 76&euro;</p>
                                     <div class="stars_3">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -106,14 +106,14 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>
                         </div>
                         <div class="hosting_line_2"> <!--second_line_hosting_division-->
                             <a class="card_link" href="#">
-                                <div class="hosting_4"> <!--hosting_4 division-->
+                                <figure class="hosting_4"> <!--hosting_4 division-->
                                     <span class="hosting_4_img"></span>                                
-                                    <h3 class="hosting_4_title">Hôtel de la mer</h3>
+                                    <figcaption class="hosting_4_title">Hôtel de la mer</figcaption>
                                     <p class="hosting_4_price">Nuit à partir de 46&euro;</p>
                                     <div class="stars_4">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -122,12 +122,12 @@
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>  
                             <a class="card_link" href="#">  
-                                <div class="hosting_5"> <!--hosting_5 division-->
+                                <figure class="hosting_5"> <!--hosting_5 division-->
                                     <span class="hosting_5_img"></span>                                
-                                    <h3 class="hosting_5_title">Auberge Le Panier</h3>
+                                    <figcaption class="hosting_5_title">Auberge Le Panier</figcaption>
                                     <p class="hosting_5_price">Nuit à partir de 23&euro;</p>
                                     <div class="stars_5">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -136,12 +136,12 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>
                             <a class="card_link" href="#">    
-                                <div class="hosting_6"><!--hostin_6 division-->
+                                <figure class="hosting_6"><!--hostin_6 division-->
                                     <span class="hosting_6_img"></span>                                
-                                    <h3 class="hosting_6_title">Hôtel chez Amina</h3>
+                                    <figcaption class="hosting_6_title">Hôtel chez Amina</figcaption>
                                     <p class="hosting_6_price">Nuit à partir de 96&euro;</p>
                                     <div class="stars_6">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -150,23 +150,23 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
+                                </figure>
                             </a>    
                         </div>
                     </div>
                     <h2 class="hosting_footer">Afficher plus</h2>
                 </div>
-                <div id="most_popular"> <!--most_popular division-->
+                <aside id="most_popular"> <!--most_popular division-->
                     <div class="most_popular_head">
                         <h1 class="most_popular_title">Les Plus Populaires</h1>
                         <span class="chart_line"><i class="fas fa-chart-line"></i></span>
                     </div>
                     <div class="popular_cards">
                         <a class="card_link" href="#">
-                            <div class="popular_1"> <!--most_popular_1_division-->
+                            <figure class="popular_1"> <!--most_popular_1_division-->
                                 <span class="popular_1_img"></span>                           
-                                <div class="popular_1_text">
-                                    <h3 class="popular_1_title">Hôtel Le soleil du matin</h3>
+                                <article class="popular_1_text">
+                                    <figcaption class="popular_1_title">Hôtel Le soleil du matin</figcaption>
                                     <p class="popular_1_price">Nuit à partir de 128&euro;</p>
                                     <div class="stars_popular_1">
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
@@ -175,14 +175,14 @@
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>       
-                            </div>
+                                </article>       
+                            </figure>
                         </a>
                         <a class="card_link" href="#">
-                            <div class="popular_2"> <!--most_popular_2_division-->
+                            <figure class="popular_2"> <!--most_popular_2_division-->
                                 <span class="popular_2_img"></span>                         
-                                <div class="popular_2_text">
-                                    <h3 class="popular_2_title">Au coeur de l'eau Chambres D'hôtes</h3>
+                                <article class="popular_2_text">
+                                    <figcaption class="popular_2_title">Au coeur de l'eau Chambres D'hôtes</figcaption>
                                     <p class="popular_2_price">Nuit à partir de 71&euro;</p>
                                     <div class="stars_popular_2">
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
@@ -191,14 +191,14 @@
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
                                         <span class="stars_popular_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
-                            </div>
+                                </article>
+                            </figure>
                         </a>
                         <a class="card_link" href="#">
-                            <div class="popular_3"> <!--most_poupular_3_division-->
+                            <figure class="popular_3"> <!--most_poupular_3_division-->
                                 <span class="popular_3_img"></span>                       
-                                <div class="popular_3_text">
-                                    <h3 class="popular_3_title">Hôtel Tout bleu et Blanc</h3>
+                                <article class="popular_3_text">
+                                    <figcaption class="popular_3_title">Hôtel Tout bleu et Blanc</figcaption>
                                     <p class="popular_3_price">Nuit à partir de 68&euro;</p>
                                     <div class="stars_popular_3">
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
@@ -207,54 +207,54 @@
                                         <span class="stars_popular"><i class="fas fa-star"></i></span>
                                         <span class="stars_popular_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </div>
-                            </div>
+                                </article>
+                            </figure>
                         </a>
                     </div>
-                </div>
+                </aside>
             </section>
             <section id="section_3"> <!--activities_section-->
                 <div id="activities">
                     <h1 class="activities_title">Activités à Marseille</h1>
                     <div class="activities_cards">
                         <a  class="card_link" href="#">
-                            <div class="old_harbor"> <!--activities_1 division-->
+                            <figure class="old_harbor"> <!--activities_1 division-->
                                 <span class="old_harbor_img"></span>
-                                <h3 class="old_harbor_title">Vieux Port</h3>
-                            </div>
+                                <figcaption class="old_harbor_title">Vieux Port</figcaption>
+                            </figure>
                         </a>
                         <div class="activities_vertical_1"> <!--vertical_1 division-->
                             <a class="card_link" href="#">
-                                <div class="pomegues_fort"> <!--activities_2 division-->
+                                <figure class="pomegues_fort"> <!--activities_2 division-->
                                     <span class="pomegues_fort_img"></span>
-                                    <h3 class="pomegues_fort_title">Fort de Pomègues</h3>
-                                </div>
+                                    <figcaption class="pomegues_fort_title">Fort de Pomègues</figcaption>
+                                </figure>
                             </a>
                             <a class="card_link" href="#">
-                                <div class="frioul_island"> <!--activities_3 division-->
+                                <figure class="frioul_island"> <!--activities_3 division-->
                                     <span class="frioul_island_img"></span>
-                                    <h3 class="frioul_island_title">Îles du Frioul</h3>
-                                </div>
+                                    <figcaption class="frioul_island_title">Îles du Frioul</figcaption>
+                                </figure>
                             </a>
                         </div>
                         <a  class="card_link" href="#">
-                            <div class="calanques_national_park"> <!--activities_4 division-->
+                            <figure class="calanques_national_park"> <!--activities_4 division-->
                                 <span class="calanques_national_park_img"></span>
-                                <h3 class="calanques_national_park_title">Parc National des Calanques</h3>
-                            </div>
+                                <figcaption class="calanques_national_park_title">Parc National des Calanques</figcaption>
+                            </figure>
                         </a>
                         <div class="activities_vertical_2"> <!--vertical_2 division-->
                             <a class="card_link" href="#">
-                                <div class="notre_dame"> <!--activities_5 division-->
+                                <figure class="notre_dame"> <!--activities_5 division-->
                                     <span class="notre_dame_img"></span>
-                                    <h3 class="notre_dame_title">Notre-Dame-de-la-Garde</h3>
-                                </div>
+                                    <figcaption class="notre_dame_title">Notre-Dame-de-la-Garde</figcaption>
+                                </figure>
                             </a>
                             <a class="card_link" href="#">
-                                <div class="longchamp_park"> <!--activities_6 division-->
+                                <figure class="longchamp_park"> <!--activities_6 division-->
                                     <span class="longchamp_park_img"></span>
-                                    <h3 class="longchamp_park_title">Parc Longchamp</h3>
-                                </div>
+                                    <figcaption class="longchamp_park_title">Parc Longchamp</figcaption>
+                                </figure>
                             </a>
                         </div>
                     </div>
