warning and error in html

--- a/index.html
+++ b/index.html
@@ -67,9 +67,11 @@
                     <div class="hosting_cards_body">
                         <div class="hosting_line_1"> <!--first_line_hosting_division-->
                             <a class="card_link" href="#">
-                                <figure class="hosting_1"> <!--hosting_1 division-->
-                                    <span class="hosting_1_img"></span>                               
-                                    <figcaption class="hosting_1_title">Auberge la Cannebière</figcaption>
+                                <div class="hosting_1"> <!--hosting_1 division-->
+                                    <figure class="hosting_1_figure">
+                                        <span class="hosting_1_img"></span>                               
+                                        <figcaption class="hosting_1_title">Auberge la Cannebière</figcaption>
+                                    </figure>
                                     <p class="hosting_1_price">Nuit à partir de 25&euro;</p>
                                     <div class="stars_1">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -78,12 +80,14 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>
                             <a class="card_link" href="#">   
-                                <figure class="hosting_2"> <!--hosting_2 division-->
-                                    <span class="hosting_2_img"></span>                                
-                                    <figcaption class="hosting_2_title">Hôtel du port</figcaption>
+                                <div class="hosting_2"> <!--hosting_2 division-->
+                                    <figure class="hosting_2_figure">
+                                        <span class="hosting_2_img"></span>                                
+                                        <figcaption class="hosting_2_title">Hôtel du port</figcaption>
+                                    </figure>
                                     <p class="hosting_2_price">Nuit à partir de 52&euro;</p>
                                     <div class="stars_2">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -92,12 +96,14 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>
                             <a class="card_link" href="#">
-                                <figure class="hosting_3"> <!--hosting_3 division-->
-                                    <span class="hosting_3_img"></span>                                
-                                    <figcaption class="hosting_3_title">Hôtel Les Mouettes</figcaption>
+                                <div class="hosting_3"> <!--hosting_3 division-->
+                                    <figure class="hosting_3_figure">
+                                        <span class="hosting_3_img"></span>                                
+                                        <figcaption class="hosting_3_title">Hôtel Les Mouettes</figcaption>
+                                    </figure>
                                     <p class="hosting_3_price">Nuit à partir de 76&euro;</p>
                                     <div class="stars_3">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -106,14 +112,16 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>
                         </div>
                         <div class="hosting_line_2"> <!--second_line_hosting_division-->
                             <a class="card_link" href="#">
-                                <figure class="hosting_4"> <!--hosting_4 division-->
-                                    <span class="hosting_4_img"></span>                                
-                                    <figcaption class="hosting_4_title">Hôtel de la mer</figcaption>
+                                <div class="hosting_4"> <!--hosting_4 division-->
+                                    <figure class="hosting_4_figure">
+                                        <span class="hosting_4_img"></span>                                
+                                        <figcaption class="hosting_4_title">Hôtel de la mer</figcaption>
+                                    </figure>
                                     <p class="hosting_4_price">Nuit à partir de 46&euro;</p>
                                     <div class="stars_4">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -122,12 +130,14 @@
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>  
                             <a class="card_link" href="#">  
-                                <figure class="hosting_5"> <!--hosting_5 division-->
-                                    <span class="hosting_5_img"></span>                                
-                                    <figcaption class="hosting_5_title">Auberge Le Panier</figcaption>
+                                <div class="hosting_5"> <!--hosting_5 division-->
+                                    <figure class="hosting_5_figure">
+                                        <span class="hosting_5_img"></span>                                
+                                        <figcaption class="hosting_5_title">Auberge Le Panier</figcaption>
+                                    </figure>
                                     <p class="hosting_5_price">Nuit à partir de 23&euro;</p>
                                     <div class="stars_5">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -136,12 +146,14 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars_grey"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>
                             <a class="card_link" href="#">    
-                                <figure class="hosting_6"><!--hostin_6 division-->
-                                    <span class="hosting_6_img"></span>                                
-                                    <figcaption class="hosting_6_title">Hôtel chez Amina</figcaption>
+                                <div class="hosting_6"><!--hostin_6 division-->
+                                    <figure class="hosting_6_figure">
+                                        <span class="hosting_6_img"></span>                                
+                                        <figcaption class="hosting_6_title">Hôtel chez Amina</figcaption>
+                                    </figure>
                                     <p class="hosting_6_price">Nuit à partir de 96&euro;</p>
                                     <div class="stars_6">
                                         <span class="stars"><i class="fas fa-star"></i></span>
@@ -150,7 +162,7 @@
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                         <span class="stars"><i class="fas fa-star"></i></span>
                                     </div>
-                                </figure>
+                                </div>
                             </a>    
                         </div>
                     </div>
